[WinCairo] Compile fix for VS2013 when using ACCELERATED_COMPOSITING. https://bugs.webkit.org/show_bug.cgi?id=124866

Patch by Alex Christensen <achristensen@webkit.org> on 2013-12-19
Reviewed by Darin Adler.

* platform/graphics/TiledBackingStore.cpp:
(WebCore::TiledBackingStore::TiledBackingStore):
* platform/graphics/TiledBackingStore.h:
Added constructor overload to avoid compile errors
from using MSVC's make_unique as a default parameter.

Canonical link: https://commits.webkit.org/143984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160843 268f45cc-cd09-0410-ab3c-d52691b4dbfc